--- a/_config.yml
+++ b/_config.yml
@@ -350,3 +350,8 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+html:
+  comments:
+    utterances:
+      repo: "github-org/github-repo"
